# repo-context-optimizer

./: .gitignore  README.md  pyproject.toml
rco/: __init__.py  cli.py
rco/analyzer/: category_detector.py  dependency_graph.py  token_counter.py
rco/exporter/: flat_file.py
rco/sampler/: sampler.py
rco/scanner/: file_scanner.py
tests/: test_rco.py
