[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-context-optimizer"
version = "0.1.0"
description = "Analyze and sample code repositories to prepare context for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "tiktoken>=0.7",
    "pathspec>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[project.scripts]
rco = "rco.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rco*"]

[tool.ruff]
line-length = 100
target-version = "py310"
